# agentic-dm

./: .env.example  .gitignore  PLAN.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
backend/: __init__.py  chat_with_mcp.py  load_graph.py  load_graph.sh  mcp-server.sh  ollama_chat.py  openai_rag.py  pdf_xml_parser.py  rag_faiss.py  start.sh
backend/agents/: __init__.py  conversation.py  dm_agent.py  tools.py
backend/agents/prompts/: __init__.py  assistant.py  autonomous.py
backend/api/: main.py
backend/api/routes/: campaign.py  chat.py  combat.py  ingest.py  npc_discord.py  players.py  search.py  shop.py  transcript.py
backend/core/: __init__.py  config.py  database.py
backend/discord/: __init__.py  bot_manager.py  combat_controller.py  combat_manager.py  combat_models.py  context_builder.py  message_router.py  models.py  npc_agent.py  npc_registry.py  srd_weapons.py
backend/discord/voice/: __init__.py  tts_service.py
backend/graph/: __init__.py  operations.py  schema.py
backend/ingestion/: __init__.py  embeddings.py  pdf_processor.py
backend/mcp-server/: schema.yml  server.py
backend/ner/: __init__.py  config.py  models.py  pipeline.py
backend/ner/extractors/: __init__.py  gazetteer_extractor.py  llm_extractor.py  spacy_extractor.py
backend/ner/gazetteers/: __init__.py  loader.py  matcher.py
backend/ner/resolution/: __init__.py  linker.py  resolver.py
backend/rag/: __init__.py  enhanced_retriever.py  hybrid_pipeline.py  pipeline.py  query_planner.py  reranker.py  retriever.py
backend/scripts/: __init__.py  ingest_pdf.py  process_transcript.py
backend/shop/: __init__.py  generator.py  models.py  registry.py  srd_items.py
backend/transcript/: __init__.py  models.py  parser.py  processor.py
frontend/: README.md  index.html  package-lock.json  package.json  script.js  server.py  styles.css  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CampaignDashboard.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  CombatTracker.tsx  EntityDetail.tsx  KnowledgeGraph.tsx  PlayerManager.tsx  Sidebar.tsx  index.ts
frontend/src/components/combat/: AddCombatantPanel.tsx  BattleMap.tsx  BattleMapToken.tsx  CombatDashboard.tsx  CombatLog.tsx  CombatSetup.tsx  CombatantCard.tsx  InitiativePanel.tsx  index.ts  types.ts  (+1 more)
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
scripts/: dm_chat.py  nerf.py  seed_enemies.py
tests/: __init__.py  test_pdf_processor.py
tests/test_agents/: __init__.py  test_conversation.py  test_tools.py
tests/test_api/: test_chat.py
tests/test_discord/: __init__.py  test_combat_controller.py  test_combat_manager.py  test_message_router.py  test_models.py
tests/test_ner/: __init__.py  test_pipeline.py
tests/test_rag/: test_query_planner.py  test_reranker.py
tests/test_transcript/: __init__.py  test_parser.py
(+8 files in other folders)
